force-app/main/default/objects/Exchange_Rate__c/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The base currency used to determine an exchange rate.</description>
    <inlineHelpText>The base currency used to determine an exchange rate.</inlineHelpText>
    <label>Base Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Exchange Rates</relationshipLabel>
    <relationshipName>Exchange_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>