force-app/main/default/objects/Exchange_Rate__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>A unique identifier for system use.</description>
    <inlineHelpText>A unique identifier for system use.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>