force-app/main/default/objects/Exchange_Rate__c/fields/Quote_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quote_Currency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The quote currency used to determine an exchange rate.</description>
    <inlineHelpText>The quote currency used to determine an exchange rate.</inlineHelpText>
    <label>Quote Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Exchange Rates (Quote Currency)</relationshipLabel>
    <relationshipName>Quote_Exchange_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>