force-app/main/default/objects/Exchange_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Exchange rate value.</description>
    <inlineHelpText>Exchange rate value.</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>