force-app/main/default/objects/Exchange_Rate__c/fields/Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Date__c</fullName>
    <description>The calendar date that this was the exchange rate for.</description>
    <inlineHelpText>The calendar date that this was the exchange rate for.</inlineHelpText>
    <label>Rate Date</label>
    <type>Date</type>
</CustomField>