force-app/main/default/objects/Exchange_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Base_Currency__c</columns>
    <columns>Quote_Currency__c</columns>
    <columns>Rate__c</columns>
    <columns>Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>